Changes in version 1.0-30:

* Removed the c++ "register" keyword from the ann sources as requested by CRAN.
* Added method="gower" for gower distance that allows categorical variables in 
the X data (the Y data are ignored, analogous to method="raw" where the relationship
between the X and Y data are not relevant).

Changes in version 1.0-27 and 1.0-29:

* Addressed an issue in the ann source code (likely a false positive) found 
by rchk at CRAN.
* Added RegisteredNativeSymbol usage according to best practices
* The error when bootstraping with method="randomForests" is fixed.
* Fixed an error in yai() when it is called by varSelection() using 
yaiMethod="randomForest", thanks to Andrew Haywood.

Changes in version 1.0-25 and 1.0-26:

* Added import directives to meet recent CRAN rules that say that functions 
from default packages other than base which are used in the package
code need to be imported.

Changes in version 1.0-24:

* Changed the examples for several functions so that they run even when dependent
packages are not present.
* Changed package title to comply with CRAN rules
* Changed require to requireNamespace in errorstats.R
* Fixed error in AsciiGridImpute insuring that factors are correctly output
and that the legend is accurate.
* Fixed url to a citation thanks to RForge checks!
* Added the ability to pass ... to impute() it is called by AsciiGridImpute().
* Made several changes to conform to the instructions regarding the use of 
"requireNamespace" for "suggested" packages. 
* Modified how reference observations are delt with when bootstrapping. 
Now, a reference that has been selected more than once due to sampling with 
replacement can not be used to represent itself unless options are used to 
force that behavior. Prior to this change, a reference could be used to represent
itself when it existed more than once in the bootstrap sample causing deflated
error estimates. Thanks to Patrick Fekety for pointing the problem and doing