@@ -4,6 +4,7 @@ Changes in version 1.0-30:
 * Added method="gower" for gower distance that allows categorical variables in 
 the X data (the Y data are ignored, analogous to method="raw" where the relationship
 between the X and Y data are not relevant).
+* Fixed a bug in varSelection pointed out by Francisco Mauro.
 
 Changes in version 1.0-27 and 1.0-29:
 
